[package]
name = "orange-cat"
authors = ["Dave Orpen"]
license = "GPL-3.0-only"
description = "A cat clone which colorizes its output"
readme = "README.md"
homepage = "https://github.com/dlorpen/orange-cat"
repository = "https://github.com/dlorpen/orange-cat"
keywords = ["cli", "cat"]
categories = ["command-line-utilities"]
version = "0.1.1"
edition = "2021"


[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.29", features = ["derive"] }
clio = { version = "0.3.5", features = ["clap", "clap-parse"] }
colored = "3.0.0"
confy = "0.6.1"
panic = { version = "0.4.0", default-features = false, features = ["color"] }
regex = "1.11.1"
serde = { version = "1.0.217", features = ["serde_derive"] }
